test-cases/negative/test_014_class_without_properties.lay
# negative test: class declaration without properties
# expected: error should be thrown or warning

define class Person


